--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^2.1.2",
-    "mocha": "^2.2.1"
+    "mocha": "^2.2.1",
+    "nock": "^1.2.1"
   },
   "dependencies": {
     "jsonwebtoken": "^4.2.1",
